--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@testing-library/user-event": "^14.4.3",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "gh-pages": "^6.1.1",
     "prettier": "2.8.8",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
