--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-chrono": "^2.4.2",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "redux": "4.2.1",
